5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1795_1600.log
== TEST (2019-05-30 16:12:07) 
-- CODE:
from numpy import *

custo= array(eval(input('custo do item:')))

desconto= custo-(custo * 0.15)
i=0
x=0 #valor total da compra
while( i == size(custo)):
	if(custo >= 80):
		x= custo[i] - desconto
i= i + 1		
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:37) 
-- CODE:
from numpy import *

custo= array(eval(input('custo do item:')))

desconto= custo-(custo * 0.15)
i=0
x=0 #valor total da compra
while( i == size(custo)):
	if(custo >= 80):
		x= custo[i] - desconto
		x= i + 1
i= i + 1		
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:25) 
-- CODE:
from numpy import *

custo= array(eval(input('custo do item:')))

desconto= custo-(custo * 0.15)
i=0
x=0 #valor total da compra
while( i == size(custo)):
	if(custo >= 80):
		x= custo[i] - desconto
	
i= i + 1		
print(round(x , 2)
-- ERROR:
File "XXXX", line 14
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:35) 
-- CODE:
from numpy import *

custo= array(eval(input('custo do item:')))

desconto= custo-(custo * 0.15)
i=0
x=0 #valor total da compra
while( i == size(custo)):
	if(custo >= 80):
		x= custo[i] - desconto
	
i= i + 1		
print(round(x , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:07) 
-- CODE:
from numpy import *

custo= array(eval(input('custo do item:')))

desconto= custo-(custo * 0.15)
#i=0
#x=0 
#while( i == size(custo)):
	#if(custo >= 80):
	#x= custo[i] - desconto
	
#i= i + 1		

print(round(desconto , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:32) 
-- CODE:
from numpy import *

custo= array(eval(input('custo do item:')))

desconto= custo-(custo * 0.15)
#i=0
#x=0 
#while( i == size(custo)):
	#if(custo >= 80):
	#x= custo[i] - desconto
	
#i= i + 1		

print(round(desconto , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:40) 
-- CODE:
from numpy import *

custo= array(eval(input('custo do item:')))

desconto= custo-(custo * 0.15)
#i=0
#x=0 
#while( i == size(custo)):
	#if(custo >= 80):
	#x= custo[i] - desconto
	
#i= i + 1		

print(round(desconto , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:42) 
-- CODE:
from numpy import *

custo= array(eval(input('custo do item:')))

desconto= custo-(custo * 0.15)
#i=0
#x=0 
#while( i == size(custo)):
	#if(custo >= 80):
	#x= custo[i] - desconto
	
#i= i + 1		

print(round(desconto , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:46) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0 
while( i == size(valor)):
	if(valor >= 80):
		x= valor[i] - desconto
	x= x + 1
i= i + 1		

print(round( , 2))
-- ERROR:
File "XXXX", line 14
    print(round( , 2))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:57) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0 
while( i == size(valor)):
	if(valor >= 80):
		x= valor[i] - desconto
	x= x + 1
i= i + 1		

print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:08) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0 
while( i == size(valor)):
	if(valor >= 80):
		x= valor[i] - desconto
		x= x + 1
i= i + 1		

print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:24) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0 
while( i = size(valor)):
	if(valor >= 80):
		x= valor[i] - desconto
		x= x + 1
i= i + 1		

print(round(x, 2))
-- ERROR:
File "XXXX", line 8
    while( i = size(valor)):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:40) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0 
while( i == size(valor)):
	if(valor >= 80):
		x= valor[i] - desconto
		x= x + 1
		i= i + 1		

print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:51) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0 
while( i == size(valor)):
	if(valor >= 80):
		x= valor[i] - desconto
		x= x + 1
	i= i + 1		

print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:32) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=valor
while( i == size(valor)):
	if(valor >= 80):
		x= valor[i] - desconto
		
i= i + 1		

print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:32) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i < 3):
	if(valor >= 80):
		x= valor[i] - desconto
		
i= i + 1		

print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:49) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0

while( i == size(valor)):
	if(valor >= 80):
		valor= valor[i] - desconto
		
i= i + 1		

print(round(valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:13) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0

while( i == size(valor)):
	if(valor >= 80):
		valor= valor[i] - desconto
		
i= i + 1		

print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:52) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0

while( i == size(valor)):
	if(valor >= 80):
		valor= valor[i] - desconto
		
i= i + 1		

print(round(valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:21) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0

while( i == size(valor)):
	if(valor >= 80):
		valor= valor[i] - desconto
		
i= i + 1		

print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:59) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i == size(valor)):
	if(valor[i] >= 80):
	valor= valor[i] - desconto	
		
i= i + 1		

print()
-- ERROR:
File "XXXX", line 10
    valor= valor[i] - desconto	
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:10) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i == size(valor)):
	if(valor[i] >= 80):
	valor= valor[i] - desconto	
		
i= i + 1		

print(valor)
-- ERROR:
File "XXXX", line 10
    valor= valor[i] - desconto	
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:29) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i == size(valor)):
	if(valor[i] >= 80):
	x= valor[i] - desconto	
		
i= i + 1		

print(valor)
-- ERROR:
File "XXXX", line 10
    x= valor[i] - desconto	
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:44) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i == size(valor)):
	if(valor[i] >= 80):
		x= valor[i] - desconto	
		
i= i + 1		

print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:00) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i == size(valor)):
	if(valor[i] >= 80):
		valor= valor[i] - desconto	
		
i= i + 1		

print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:24) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i == size(valor)):
	if(valor[i] >= 80):
		x= valor[i] - desconto	
		
i= i + 1		

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:53) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i == size(valor)):
	if(valor[i] >= 80):
		x= valor[i] - desconto	
	x=x+1	
i= i + 1		

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:03) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma=0
while( i == size(valor)):
	if(valor[i] >= 80):
		soma= valor[i] - desconto	
		
i=i+1		

print(round(soma , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:54) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= 0
while( i == size(valor)):
	if(valor[i] >= 80):
		valor= valor[i] - desconto 
		soma= valor + i
i=i+1		

print(round(soma , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:17) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= 0
while( i == size(valor)):
	if(valor[i] >= 80):
		valor= valor[i] - desconto 
		soma= soma + 1
i=i+1		

print(round(soma , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:41) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= 0
while( i == size(valor)):
	if(valor[i] >= 80):
	valor = valor - desconto
i= i + 1
	print(round(valor, 2))
	


-- ERROR:
File "XXXX", line 10
    valor = valor - desconto
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:48) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= 0
while( i == size(valor)):
	if(valor[i] >= 80):
		valor = valor - desconto
i= i + 1
	print(round(valor, 2))
	


-- ERROR:
File "XXXX", line 12
    print(round(valor, 2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:55) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= 0
while( i == size(valor)):
	if(valor[i] >= 80):
		valor = valor - desconto
i= i + 1
print(round(valor, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:17) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= 0
while( i == size(valor)):
	if(valor[i] >= 80):
		valor = valor - desconto
i= i + 1
print(sum(round(valor, 2)))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:04) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= 0
while( i == size(valor)):
	if(valor[i] >= 80):
		valor = valor - desconto
i= i + 1
print(round(valo, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:14) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= 0
while( i == size(valor)):
	if(valor[i] >= 80):
		valor = valor - desconto
i= i + 1
print(round(valor, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:59) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
0
while( i == size(valor)):
	if(valor[i] >= 80):
		x = valor[i] - desconto
i= i + 1
print(round(x, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:14) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
x=0
while( i == size(valor)):
	if(valor[i] >= 80):
		x = valor[i] - desconto
i= i + 1
print(round(x, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:27) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= vetor[0] - desconto
while( i == size(valor)):
	if(valor[i] >= 80):
	
print(soma)

	


-- ERROR:
File "XXXX", line 11
    print(soma)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:40) 
-- CODE:
from numpy import *

valor= array(eval(input('custo do item:')))

desconto= (valor * 0.15)
i=0
soma= vetor[0] - desconto

	
print(soma)

	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
